--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ducky_round"
         android:theme="@style/Theme.Iwara4a"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="n">
         <profileable
             android:shell="true"
             tools:targetApi="29" />
